Creacion de la seccion perfil

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <header class="header">
         <nav class="header-nav">
           <a href="#perfil" class="header-nav__link-logo-container">
-            <img src="./img/Imagen Moises Formal short .jpeg" alt="Logo My travels" class="header-nav__link-logo" />
+            <img src="https://cms-assets.tutsplus.com/cdn-cgi/image/width=850/uploads/users/2659/posts/32230/image/travel-agency-logo-maker-with-travel-graphics-a1202.jpg" alt="Logo My travels" class="header-nav__link-logo" height="50" width="50" />
+            <div class="header-nav__name-logo">
+                My Travels: Travel is to live <br>
+                Live with us
+            </div>
           </a>
           <label for="menu" class="header-nav__menu-icon">
             <i class="fas fa-hamburger"></i>
@@ -20,82 +24,42 @@
           <input type="checkbox" name="menu" id="menu" class="header-nav__menu-checkbox" />
           <ul class="header-nav__link-list">
             <li class="header-nav__link-item">
-              <a href="#perfil" class="header-nav__link">Perfil</a>
+              <a href="#about us" class="header-nav__link">About us</a>
             </li>
             <li class="header-nav__link-item">
-              <a href="#experiencia" class="header-nav__link">Experiencia</a>
+              <a href="#promotions" class="header-nav__link">promotions</a>
             </li>
             <li class="header-nav__link-item">
-              <a href="#habilidades" class="header-nav__link">Habilidades</a>
+              <a href="#Destinations" class="header-nav__link">Destinations</a>
             </li>
             <li class="header-nav__link-item">
-              <a href="#contacto" class="header-nav__link">Contacto</a>
+              <a href="#contact" class="header-nav__link">Contact</a>
             </li>
           </ul>
         </nav>
       </header>   
       <main>
-        <section id="perfil" class="perfil">
-            <div class="perfil-container">
-              <div class="perfil__info animate__animated  animate__fadeInLeft">
-                <h1 h1 class="perfil__info-title">Hola, yo soy Moises Arrieta, Desarrollador de sueños.</h1>
-                <p class="perfil__info-description">
-                  Estudiante de Frontend y backend en Codigo, futuro desarrollador.
-                  Apasionado del autoaprendizaje con el deseo de crecer en el Desarrollo
-                  Web Frontend. 
-                </p>
-              </div>
-              <div class="perfil__info-link-container">
-                <a class="perfil__info-link" href="#">CV</a>
-                <a class="perfil__info-link" href="#">Portafolio</a>
-              </div>
-            </div>
-    
+          <section class="perfil" id="about us">
             <div class="perfil__cover-image animate__animated  animate__fadeInRight">
-              <figure class="perfil__cover-image-container">
-                <img
-                  src="./img/Imagen Moises Viaje.jpeg"
-                  alt="Foto de Moises Arrieta" class="perfil__image"
-                />
-              </figure>
-            </div>
-          </section>    
-          <section class="experiencia" id="experiencia">
-            <div class="experiencia-container">
-              <h2 class="experiencia__title">Experiencia</h2>
-              <div class="experiencia__experiencias">
-                <section class="experiencia__experiencia">
-                  <h4 class="experiencia__date">Enero 2021, Diciembre 2021 </h4>
-                  <h3 class="experiencia__company">Andromeda technology</h3>
-                  <h4 class="experiencia__role">Ayudante de instalación</h4>
-                  <ul class="experiencia__activities">
-                    <li class="experiencia__activity">Instalación de cableados</li>
-                    <li class="experiencia__activity">Revision de equipos de seguridad</li>
-                    <li class="experiencia__activity">Reinstalación de equipos de seguridad</li>
-                  </ul>
-                </section>
-                <section class="experiencia__experiencia">
-                  <h4 class="experiencia__date">Abril 2020, Diciembre 2020 </h4>
-                  <h3 class="experiencia__company">AUTOS FORCE</h3>
-                  <h4 class="experiencia__role">Trabajador Especializado</h4>
-                  <ul class="experiencia__activities">
-                    <li class="experiencia__activity">Mantenimiento/Tratamiento de Pintura</li>
-                    <li class="experiencia__activity">Lavados de salon</li>
-                    <li class="experiencia__activity">Undercoating</li>
-                  </ul>
-                </section>
-                <section class="experiencia__experiencia">
-                  <h4 class="experiencia__date">Enero 2020, Marzo 2020 </h4>
-                  <h3 class="experiencia__company">Guty Restaurant</h3>
-                  <h4 class="experiencia__role">Ayudante de cocina/Mozo</h4>
-                  <ul class="experiencia__activities">
-                    <li class="experiencia__activity">Preparación de platillos marinos</li>
-                    <li class="experiencia__activity">Atención al cliente</li>
-                  </ul>
-                </section>
+                <figure class="perfil__cover-image-container">
+                  <img
+                    src="http://static.ella-hoy.es/r/845X0/www.ella-hoy.es/img/destinos-turisticos-que-no-son-como-esperabas.jpg"
+                    alt="Foto Promocional viajes" class="perfil__image"
+                  />
+                </figure>
               </div>
-            </div>
-          </section>
-    
+              <div class="perfil-container">
+                <div class="perfil__info animate__animated  animate__fadeInLeft">
+                  <h1 h1 class="perfil__info-title">My Travels "Travel is to live, live with us"</h1>
+                  <p class="perfil__info-description">
+                    Welcome to My Travels!! Our agency aims for the traveler to enjoy the destinations to the fullest,
+                     offering a top quality service, along with the best comforts and security that we provide throughout this wonderful experience. 
+                  </p>
+                </div>
+                <div class="perfil__info-link-container">
+                  <a class="perfil__info-link" href="#">Contact us</a>
+                </div>
+              </div>
+      </main>
 </body>
 </html>
