--- a/index.html
+++ b/index.html
@@ -60,6 +60,57 @@
                   <a class="perfil__info-link" href="#">Contact us</a>
                 </div>
               </div>
+              <section class="wave-separator animate__animated  animate__fadeInUp">
+                <figure class="wave-separator__container" >
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ff5500" fill-opacity="1" d="M0,96L1440,224L1440,320L0,320Z"></path></svg>              </section>
+          </section>
+          <section class="promotions" id="promotions">
+            <div class="promotions-container">
+                <h2 class="promotions__title">Promotions</h2>
+                <div class="promotions__promotions">
+                    <section class="promotions__promotion">
+                        <h4 class="promotion__date">Desde 7/2/22 Hasta 28/2/22</h4>
+                        <h3 class="promotion__destiny">Perú (Lima) - Estados Unidos (Miami)</h3>
+                        <h4 class="promotion__pack">8 Días - 7 Noches <br> El paquete incluye:</h4>
+                        <ul class="promotion__activities">
+                            <li class="promotion__activity">Transporte Aeropuerto-Hotel/Hotel-Aeropuerto</li>
+                            <li class="promotion__activity">Coctel de bienvenida</li>
+                            <li class="promotion__activity">Desayuno-Cena</li>
+                            <li class="promotion__activity">Actividades Recreativas</li>
+                            <li class="promotion__activity">Tours-ciudad</li>
+                            <li class="promotion__activity">Balnearios (opcional)</li>
+                        </ul>
+                            <h4 class="promotion__activities">No incluye:</h4>
+                        <ul>
+                            <li class="promotion__activity">Entrada a: Museos,parques,etc.</li>
+                            <li class="promotion__activity">Almuerzos</li>
+                            <li class="promotion__activity">Otros servicios no mencionados</li>
+                        </ul>
+                            <h4 class="promotion__activities">Precio: 999$</h4>
+                    </section>
+                    <section class="promotions__promotion">
+                        <h4 class="promotion__date">Desde 14/2/22 Hasta 28/2/22</h4>
+                        <h3 class="promotion__destiny">Perú (Lima) - Panamá (Panamá)</h3>
+                        <h4 class="promotion__pack">4 Días - 3 Noches <br> El paquete incluye:</h4>
+                        <ul class="promotion__activities">
+                            <li class="promotion__activity">Transporte Aeropuerto-Hotel/Hotel-Aeropuerto</li>
+                            <li class="promotion__activity">Coctel de bienvenida</li>
+                            <li class="promotion__activity">Desayuno-Cena</li>
+                            <li class="promotion__activity">Actividades Recreativas</li>
+                            <li class="promotion__activity">Tours-ciudad</li>
+                            <li class="promotion__activity">Balneareos (opcional)</li>
+                        </ul>
+                            <h4 class="promotion__activities">No incluye:</h4>
+                        <ul>
+                            <li class="promotion__activity">Entrada a: Museos,parques,etc.</li>
+                            <li class="promotion__activity">Almuerzos</li>
+                            <li class="promotion__activity">Otros servicios no mencionados</li>
+                        </ul>
+                        <h4 class="promotion__activities">Precio: 599$</h4>
+                    </section>
+                </div>
+            </div>
+          </section>
       </main>
 </body>
 </html>
