Creacion de la seccion contact

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
               </div>
               <section class="wave-separator animate__animated  animate__fadeInUp">
                 <figure class="wave-separator__container" >
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ff5500" fill-opacity="1" d="M0,96L1440,224L1440,320L0,320Z"></path></svg>              </section>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ff5500" fill-opacity="1" d="M0,96L1440,224L1440,320L0,320Z"></path></svg>              
+                </section>
           </section>
           <section class="promotions" id="promotions">
             <div class="promotions-container">
@@ -111,6 +112,18 @@
                 </div>
             </div>
           </section>
+          <section id="contactc" class="contacto">
+            <div class="contacto-container">
+              <h2 class="contanto__title">Contacto</h2>
+              <form action="/" class="contacto__form">
+                <input type="text" id="Nombre" placeholder="Nombre" name="nombre" class="contacto__form-input" required/>
+                <input type="email" id="email" placeholder="Correo" name="email" class="contacto__form-input" required />
+                <input type="number" id="celular" placeholder="Celular" class="contacto__form-input" min="900000000" max="999999999"/>
+                <button class="contacto__form-buttom">Contact us</button>
+              </form>
+            </div>
+          </section>
+    
       </main>
 </body>
 </html>
