Creacion de la seccion footer

--- a/index.html
+++ b/index.html
@@ -123,6 +123,23 @@
               </form>
             </div>
           </section>
+          <footer>
+            <nav class="footer-nav">
+              <ul class="redes">
+                <li>
+                  <a href="https://www.facebook.com/moisesjose.arrietavelasquez" target="_blank">
+                    <i class="fab fa-facebook"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.instagram.com/arrietamoises/?hl=es" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                  </a>
+                </li>
+              </ul>
+              <h4>Desarrollado por Moises Arrieta &copy; 2022</h4>
+            </nav>
+          </footer>
     
       </main>
 </body>
