Colocacion de CSS a la seccion perfil

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </header>   
       <main>
           <section class="perfil" id="about us">
-            <div class="perfil__cover-image animate__animated  animate__fadeInRight">
+            <div class="perfil__cover-image">
                 <figure class="perfil__cover-image-container">
                   <img
                     src="http://static.ella-hoy.es/r/845X0/www.ella-hoy.es/img/destinos-turisticos-que-no-son-como-esperabas.jpg"
@@ -60,7 +60,7 @@
                   <a class="perfil__info-link" href="#">Contact us</a>
                 </div>
               </div>
-              <section class="wave-separator animate__animated  animate__fadeInUp">
+              <section class="wave-separator ">
                 <figure class="wave-separator__container" >
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ff5500" fill-opacity="1" d="M0,96L1440,224L1440,320L0,320Z"></path></svg>              
                 </section>
@@ -112,6 +112,10 @@
                 </div>
             </div>
           </section>
+          <section class="wave-separator ">
+            <figure class="wave-separator__container wave-separator__container--r-180deg" >
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ff5500" fill-opacity="1" d="M0,96L1440,224L1440,320L0,320Z"></path></svg>              
+            </section>
           <section id="contactc" class="contacto">
             <div class="contacto-container">
               <h2 class="contanto__title">Contacto</h2>
