Colocacion de CSS a la seccion promotions

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <nav class="header-nav">
           <a href="#perfil" class="header-nav__link-logo-container">
             <img src="https://cms-assets.tutsplus.com/cdn-cgi/image/width=850/uploads/users/2659/posts/32230/image/travel-agency-logo-maker-with-travel-graphics-a1202.jpg" alt="Logo My travels" class="header-nav__link-logo" height="50" width="50" />
-            <div class="header-nav__name-logo">
+            <!-- <div class="header-nav__name-logo">
                 My Travels: Travel is to live <br>
                 Live with us
-            </div>
+            </div> -->
           </a>
           <label for="menu" class="header-nav__menu-icon">
             <i class="fas fa-hamburger"></i>
@@ -49,7 +49,7 @@
                 </figure>
               </div>
               <div class="perfil-container">
-                <div class="perfil__info animate__animated  animate__fadeInLeft">
+                <div class="perfil__info ">
                   <h1 h1 class="perfil__info-title">My Travels "Travel is to live, live with us"</h1>
                   <p class="perfil__info-description">
                     Welcome to My Travels!! Our agency aims for the traveler to enjoy the destinations to the fullest,
@@ -60,11 +60,11 @@
                   <a class="perfil__info-link" href="#">Contact us</a>
                 </div>
               </div>
-              <section class="wave-separator ">
-                <figure class="wave-separator__container" >
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ff5500" fill-opacity="1" d="M0,96L1440,224L1440,320L0,320Z"></path></svg>              
+              </section>
+              <section class="wave-separator">
+                <figure class="wave-separator__container">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ff5500" fill-opacity="1" class="wave-separator__wave" d="M0,96L1440,224L1440,320L0,320Z"></path></svg>                
                 </section>
-          </section>
           <section class="promotions" id="promotions">
             <div class="promotions-container">
                 <h2 class="promotions__title">Promotions</h2>
