Creacion de seccion media mobile

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <a href="#about us" class="header-nav__link">About us</a>
             </li>
             <li class="header-nav__link-item">
-              <a href="#promotions" class="header-nav__link">promotions</a>
+              <a href="#promotions" class="header-nav__link">Promotions</a>
             </li>
             <li class="header-nav__link-item">
               <a href="#Destinations" class="header-nav__link">Destinations</a>
@@ -40,14 +40,6 @@
       </header>   
       <main>
           <section class="perfil" id="about us">
-            <div class="perfil__cover-image">
-                <figure class="perfil__cover-image-container">
-                  <img
-                    src="http://static.ella-hoy.es/r/845X0/www.ella-hoy.es/img/destinos-turisticos-que-no-son-como-esperabas.jpg"
-                    alt="Foto Promocional viajes" class="perfil__image"
-                  />
-                </figure>
-              </div>
               <div class="perfil-container">
                 <div class="perfil__info ">
                   <h1 h1 class="perfil__info-title">My Travels "Travel is to live, live with us"</h1>
@@ -59,6 +51,14 @@
                 <div class="perfil__info-link-container">
                   <a class="perfil__info-link" href="#">Contact us</a>
                 </div>
+              </div>
+              <div class="perfil__cover-image">
+                <figure class="perfil__cover-image-container">
+                  <img
+                    src="http://static.ella-hoy.es/r/845X0/www.ella-hoy.es/img/destinos-turisticos-que-no-son-como-esperabas.jpg"
+                    alt="Foto Promocional viajes" class="perfil__image"
+                  />
+                </figure>
               </div>
               </section>
               <section class="wave-separator">
@@ -116,7 +116,7 @@
             <figure class="wave-separator__container wave-separator__container--r-180deg" >
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ff5500" fill-opacity="1" d="M0,96L1440,224L1440,320L0,320Z"></path></svg>              
             </section>
-          <section id="contactc" class="contacto">
+          <section id="contact" class="contacto">
             <div class="contacto-container">
               <h2 class="contanto__title">Contacto</h2>
               <form action="/" class="contacto__form">
